Ooops.  Chrome is throwing scrollbars everywhere.  Fix that.

--- a/source/_themes/125book/static/runestone-iwu-custom-sphinx-bootstrap.css
+++ b/source/_themes/125book/static/runestone-iwu-custom-sphinx-bootstrap.css
@@ -52,7 +52,7 @@ div#content-wrapper {
 }
 .container  .section >*:not(.section) {
 	max-width: 500pt;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .container .section > .table {
